Doc/force-app/main/default/objects/Integration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Designates which firm this integration is running at.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Integration</relationshipName>
    <type>Lookup</type>
</CustomField>