Doc/force-app/main/default/objects/Integration__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <defaultValue>&quot;Enter information about who was impacted, to what degree, and what the business value is to this integration...&quot;</defaultValue>
    <description>Discuss the business value of this use case.</description>
    <label>Business Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>