Doc/force-app/main/default/objects/Integration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <defaultValue>&quot;Input integration description here - provide as much detail as possible&quot;</defaultValue>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>