Doc/force-app/main/default/objects/Integration__c/fields/Integration_Number__c.field-meta.xml
<CustomField>
    <fullName>Integration_Number__c</fullName>
    <displayFormat>I{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Integration Number</label>
    <type>AutoNumber</type>
</CustomField>