Doc/force-app/main/default/objects/Integration__c/fields/Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Use_Case__c</fullName>
    <label>Use Case</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Audit / Cleansing</fullName>
            </value>
            <value>
                <fullName>Distribution List Management</fullName>
            </value>
            <value>
                <fullName>Document Activity Monitoring</fullName>
            </value>
            <value>
                <fullName>Event-Driven Notification</fullName>
            </value>
            <value>
                <fullName>Legacy Integration</fullName>
            </value>
            <value>
                <fullName>Matter Centricity</fullName>
            </value>
            <value>
                <fullName>MDD</fullName>
            </value>
            <value>
                <fullName>New Business Intake</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portals</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>User Provisioning</fullName>
            </value>
            <value>
                <fullName>VoIP</fullName>
            </value>
            <value>
                <fullName>Warehousing / Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>